data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1606.wast
;; 7. **Test Description:**    - Perform `br_table` with negative or logically invalid indices, and place `unreachable` expecting a trap before the index evaluation.    - **Constraint:** Validates whether `unreachable` prevents invalid index handling errors.    - **Relation to Edge Case:** Tests implementation consistency on handling illegal indices preempted by `unreachable`.

(assert_invalid
  (module (func $br_table-with-unreachable (result i32)
    (block (result i32)
      (unreachable)
      (br_table 0 1 (i32.const -1))
    )
  ))
  "type mismatch"
)